2008-06-04  Shai Ayal  <shaiay@users.sourceforge.net>

	* graphics.h.in (axes::pixel2coord, axes::coord2pixel): New functions.

	* graphics.cc (convert_position): No longer static.
	* graphics.h.in: Provide decl.

 	* graphics.cc (Favailable_backends): New function.
  	* graphics.h.in (base_graphics_backend::available_backends_list):
	New function.

	* graphics.cc (axes::properties::calc_ticks_and_lims): Refactor.
	Adjust axes limits & tics together so that the result is consistent.
	(axes::properties::calc_tick_sep): Ditto.
	(axes::properties::get_axis_limits): Ditto.  Now a member of
	axes::properties
	(magform): Now file-scope static function instead of
	axes::properties member function.

	* graphics.h.in (axes::properties::update_xlim): call the new
	axes::properties::calc_ticks_and_lims method
	(axes::properties::update_ylim): ditto
	(axes::properties::update_zlim): ditto

2008-06-04  Michael Goffioul <michael.goffioul@gmail.com>

	* graphics.h.in (array_property::array_property(void)): New default
	constructor.
	(array_property::xmin, array_property:xmax, array_property::xminp,
	array_property::min_val, array_property::max_val,
	array_property::min_pos): New fields and accessors to hold min/max
	values of the array data.
	(array_property::get_data_limits): New method to compute min/max
	values of the array data.
	(base_properties::get_cdata_property,
	graphics_object::get_cdata_property): Return array_property.
	(image::properties::cdata, surface::properties::cdata,
	patch::properties::cdata, patch::properties::facevertexcdata): Turn
	into array_property type.
	(image::properties::init, surface::properties::init,
	patch::properties::init): Add constraint initialization for cdata and
	facevertexcdata (patch only).
	* genprops.awk (emit_get_array): New function to emit accessor for
	array_property.
	(emit_declarations): Use it.
	* graphics.cc (get_array_limits): New template function to compute
	min/max values of an Array<T> object.